@@ -2752,6 +2752,14 @@ ZEND_BEGIN_ARG_INFO_EX(arginfo_parse_str, 0, 0, 1)
 ZEND_END_ARG_INFO()
 
 static
+ZEND_BEGIN_ARG_INFO_EX(arginfo_str_getcsv, 0, 0, 1)
+	ZEND_ARG_INFO(0, string)
+	ZEND_ARG_INFO(0, delimiter)
+	ZEND_ARG_INFO(0, enclosure)
+	ZEND_ARG_INFO(0, escape)
+ZEND_END_ARG_INFO()
+
+static
 ZEND_BEGIN_ARG_INFO(arginfo_str_repeat, 0)
 	ZEND_ARG_INFO(0, input)
 	ZEND_ARG_INFO(0, mult)
@@ -3230,6 +3238,7 @@ zend_function_entry basic_functions[] = {
 	PHP_FE(chr,																arginfo_chr)
 	PHP_FE(ord,																arginfo_ord)
 	PHP_FE(parse_str,														arginfo_parse_str)
+	PHP_FE(str_getcsv,														arginfo_str_getcsv)
 	PHP_FE(str_pad,															arginfo_str_pad)
 	PHP_FALIAS(chop,				rtrim,									arginfo_rtrim)
 	PHP_FALIAS(strchr,				strstr,									arginfo_strstr)
