@@ -64,6 +64,7 @@ PHP                                                                        NEWS
   . "context" and "binary_pipes" params in "other_options" arg. (Sara)
   . stream_resolve_include_path(). (Sara)
 - Added shm_has_var() function. (Mike)
+- Added str_getcsv() function. (Sara)
 
 - Fixed bug #39504 (xmlwriter_write_dtd_entity() creates Attlist tag, 
   not enity). (Hannes Magnusson)
